# space_pearates

./: .gitignore  CMakeLists.txt  MILESTONE_WRITEUP.txt  MILESTONE_WRITEUP_FULLY_PLAYABLE.txt  MILESTONE_WRITEUP_MINIMAL_PLAYABILITY.txt  MILESTONE_WRITEUP_ROBUST_GAME.txt  README.md
MILESTONE_FEEDBACKS/: minimally_playable_game.txt  playable_game.txt  proposal.txt  robust_game.txt  skeletal_game.txt
data/map/: map0.txt  map0_large.txt  map0_larger.txt  map1.txt  map2.txt  map3.txt  map4.txt  map5.txt  tutorial.txt
data/meshes/: cube.mesh  hexagon.ply  pyramid.mesh  salmon.mesh  shape.mesh  triangle.mesh
data/player/: player_data.txt
data/towers/: boomerang_tower_data.txt  fire_tower_data.txt  light_tower_data.txt  star_tower_data.txt  water_tower_data.txt
data/waveSet/: waveset0.txt  waveset1.txt  waveset1_old.txt  waveset2.txt  waveset3.txt  waveset4.txt  waveset5.txt
data/waveSet/wave/: testwave0-0.txt  wave-short.txt  wave0-0.txt  wave0-1.txt  wave0-2.txt  wave0-3.txt  wave0-4.txt  wave0-5.txt  wave0-6.txt  wave0-7.txt  wave1-1.txt  wave1-2.txt  wave1-3.txt  wave2-1.txt  wave2-2.txt  wave2-3.txt  wave2-4.txt  wave2-5.txt  wave3-1.txt  wave3-2.txt  wave3-3.txt  wave3-4.txt  (+13 more)
ext/: lib_reminder.txt
ext/stb_image/: stb_image.h
shaders/: billboard.frag  billboard.vert  glyph.frag  glyph.vert  mesh.frag  mesh.vert  sprite.frag  sprite.vert  water_tower_range_effect.frag
src/: audio_loader.cpp  audio_loader.hpp  base.cpp  base.hpp  collision_component.hpp  color_component.cpp  color_component.hpp  component.hpp  entity.cpp  entity.hpp  entity_manager.cpp  entity_manager.hpp  event.hpp  event_system.cpp  event_system.hpp  game_over_menu.cpp  game_over_menu.hpp  help_menu.cpp  help_menu.hpp  hud.cpp  hud.hpp  line.cpp  line.hpp  main.cpp  math.cpp  math.hpp  movement_component.cpp  movement_component.hpp  movement_system.cpp  movement_system.hpp  player_component.cpp  player_factory.cpp  player_factory.hpp  player_system.cpp  player_system.hpp  program.cpp  program.hpp  project_path.hpp.in  sprite_component.cpp  sprite_component.hpp  (+16 more)
src/Base/: base_factory.cpp  base_factory.hpp
src/Components/: animated_component.cpp  animated_component.hpp  background_component.hpp  base_component.hpp  collision_component.cpp  collision_component.hpp  color_component.hpp  component.hpp  damage_component.cpp  damage_component.hpp  death_component.cpp  death_component.hpp  enemy_component.cpp  enemy_component.hpp  enemy_path_component.cpp  enemy_path_component.hpp  enemy_spawn_component.cpp  enemy_spawn_component.hpp  health_component.cpp  health_component.hpp  home_component.cpp  home_component.hpp  map_component.cpp  map_component.hpp  mesh_collision_component.cpp  mesh_collision_component.hpp  mesh_component.cpp  mesh_component.hpp  movement_component.cpp  movement_component.hpp  particle_component.hpp  player_component.cpp  player_component.hpp  projectile_component.cpp  projectile_component.hpp  resource_component.cpp  resource_component.hpp  spline_component.cpp  spline_component.hpp  sprite_component.cpp  (+11 more)
src/DataLoaders/: data_loading_utility.cpp  data_loading_utility.hpp  player_data_loader.cpp  player_data_loader.hpp  player_structs.cpp  player_structs.hpp  tower_data_loader.cpp  tower_data_loader.hpp  tower_structs.cpp  tower_structs.hpp
src/Enemies/: enemy.cpp  enemy.hpp  enemy_factory.cpp  enemy_factory.hpp
src/EntityFactories/: background_entity_factory.cpp  background_entity_factory.hpp  base_factory.cpp  base_factory.hpp  build_area_indicator_entity_factory.cpp  build_area_indicator_entity_factory.hpp  enemy_factory.cpp  enemy_factory.hpp  enemy_spawn_factory.cpp  enemy_spawn_factory.hpp  home_factory.cpp  home_factory.hpp  map_entity_factory.cpp  map_entity_factory.hpp  menu_ui_factory.cpp  menu_ui_factory.hpp  particle_factory.cpp  particle_factory.hpp  player_factory.cpp  player_factory.hpp  projectile_entity_factory.cpp  projectile_entity_factory.hpp  resource_factory.cpp  resource_factory.hpp  simple_sprite_factory.cpp  simple_sprite_factory.hpp  tile_factory.cpp  tile_factory.hpp  tower_entity_factory.cpp  tower_entity_factory.hpp  tower_ui_entity_factory.cpp  tower_ui_entity_factory.hpp  waveset_manager_factory.cpp  waveset_manager_factory.hpp
src/Events/: .event.hpp.swp  collision_event.cpp  collision_event.hpp  event.hpp  operate_tower_event.cpp  operate_tower_event.hpp
src/Resources/: resource.cpp  resource.hpp
src/Scenes/: abstract_scene.hpp  how_to_play_scene.cpp  how_to_play_scene.hpp  level_selection_scene.cpp  level_selection_scene.hpp  loading_scene.cpp  loading_scene.hpp  main_menu_scene.cpp  main_menu_scene.hpp  scene_manager.cpp  scene_manager.hpp  tutorial_scene.cpp  tutorial_scene.hpp
src/Systems/: background_system.cpp  background_system.hpp  billboard_system.cpp  billboard_system.hpp  collision_system.cpp  collision_system.hpp  damage_system.cpp  damage_system.hpp  death_system.cpp  death_system.hpp  enemy_spawn_system.cpp  enemy_spawn_system.hpp  enemy_system.cpp  enemy_system.hpp  event_system.cpp  event_system.hpp  home_system.cpp  home_system.hpp  interpolation_system.cpp  interpolation_system.hpp  level_assets_system.cpp  level_assets_system.hpp  menu_ui_system.cpp  menu_ui_system.hpp  mesh_system.cpp  mesh_system.hpp  movement_system.cpp  movement_system.hpp  offscreen_garbage_system.cpp  offscreen_garbage_system.hpp  particle_system.cpp  particle_system.hpp  physics_system.cpp  physics_system.hpp  player_system.cpp  player_system.hpp  render_to_texture_system.cpp  render_to_texture_system.hpp  resource_system.cpp  resource_system.hpp  (+16 more)
src/TileMapping/: map_component.cpp  map_component.hpp  map_entity_factory.cpp  map_entity_factory.hpp  tile_factory.cpp  tile_factory.hpp  tile_map_system.cpp  tile_map_system.hpp
src/Tower/: tower_entity_factory.cpp  tower_entity_factory.hpp
src/Utility/: audio_loader.cpp  audio_loader.hpp  line.cpp  line.hpp  math.cpp  math.hpp  program.cpp  program.hpp  text.cpp  text.hpp  texture.cpp  texture.hpp  timer.cpp  timer.hpp  utility.cpp  utility.hpp  waveset_structs.cpp  waveset_structs.hpp
(+39 files in other folders)
